@@ -1,6 +1,6 @@
 <?php
 // Edit and set configuration values in the LDAP database
-// $Id: config_edit_attribute.php,v 1.6 2003-04-23 11:49:38 turbo Exp $
+// $Id: config_edit_attribute.php,v 1.7 2003-06-18 12:41:05 turbo Exp $
 //
 session_start();
 
@@ -12,8 +12,19 @@ include("./header.html");
 
 // forward back to configuration detail page
 function attribute_forward($msg, $rlnb = false) {
+	global $attrib, $$attrib, $domain, $rootdn, $view, $delval;
+
     $msg = urlencode($msg);
-    $url = "config_detail.php?msg=$msg";
+	if(lc($attrib) == 'controlsadministrator') {
+		if($$attrib)
+		  $userdn = urlencode($$attrib);
+		elseif($delval)
+		  $userdn = urlencode($delval);
+
+		$url = "user_detail.php?rootdn=$rootdn&domain=$domain&user=$userdn&view=$view&msg=$msg";
+	} else
+	  $url = "config_detail.php?msg=$msg";
+
 	if($rlnb and $config["PQL_GLOB_AUTO_RELOAD"])
 	  $url .= "&rlnb=1";
 
@@ -27,6 +38,8 @@ if($submit == 1) {
     } else {
 		attribute_print_form();
     }
+} elseif($submit == 2) {
+	attribute_save();
 } elseif($delval) {
 	attribute_save();
 } else {
