@@ -20,7 +20,7 @@
     if(isset($domains)) {
 		asort($domains);
 		$new_tr = 0;
-		foreach($domains as $rootdn => $doms) {
+		foreach($domains as $branch => $doms) {
 			foreach($doms as $branch) {
 				if($new_tr) {
 ?>
@@ -31,7 +31,7 @@
       <tr class="<?=$class?>">
         <td class="title">Access to DN:</td>
 <?php			} $new_tr = 1; ?>
-        <td><a href="domain_detail.php?rootdn=<?=$rootdn?>&domain=<?=$branch?>"><?=$branch?></a></td>
+        <td><a href="domain_detail.php?rootdn=<?=$branch?>&domain=<?=$branch?>"><?=$branch?></a></td>
         <td>
           <a href="domain_edit_attributes.php?attrib=administrator&domain=<?=$branch?>&user=<?=$userdn?>&submit=4&action=delete&view=<?=$view?>"><img src="images/del.png" width="12" height="12" border="0" alt="Deny user admin access to domain"></a>
         </td>
@@ -68,6 +68,7 @@
         </td>
 <?php      } ?>
       </tr>
+
 <?php   }
     } else {
 ?>
@@ -81,6 +82,24 @@
 <?php
     }
 ?>
+      <tr class="<?=$class?>">
+        <td class="title">Administrate QmailLDAP/Controls</td>
+<?php       if($controlsadministrator) { ?>
+        <td>Yes</td>
+        <td>
+          <a href="config_edit_attribute.php?rootdn=<?=$rootdn?>&domain=<?=$domain?>&attrib=controlsadministrator&delval=<?=$userdn?>&submit=2&view=<?=$view?>">
+            <img src="images/del.png" width="12" height="12" border="0" alt="Disallow user to administrate Controls information">
+          </a>
+        </td>
+<?php       } else { ?>
+        <td>No</td>
+        <td>
+          <a href="config_edit_attribute.php?rootdn=<?=$rootdn?>&domain=<?=$domain?>&attrib=controlsadministrator&controlsadministrator=<?=$userdn?>&submit=2&view=<?=$view?>">
+            <img src="images/edit.png" width="12" height="12" border="0" alt="Allow user to administrate Controls information">
+          </a>
+        </td>
+<?php      } ?>
+      </tr>
     </th>
   </table>
 
