@@ -40,6 +40,11 @@ phpQLAdmin 2.0.15 Release (TO BE ANNOUNCED)
 		autoCreateUsername	1.3.6.1.4.1.8767.3.2.1.14
 		autoCreateMailAddress	1.3.6.1.4.1.8767.3.2.1.15
 	    Closes bugs 3, 4 and 5
+	  - Added the possibility to allow/disallow user from viewing/administrating
+	    the QmailLDAP/Controls information by adding a new attribute
+	    to the phpQLAdminBranch objectclass. The attribute OID is:
+		controlsAdministrator	1.3.6.1.4.1.8767.3.2.1.16
+	    Closes bug 13
 	  - Disable the showing of the icons 'Delivery properties',
 	    'Mailbox properties' and 'User access' if we don't run in
 	    advanced mode.
